--- a/notebooks/Ch5-Continuous-time models.ipynb
+++ b/notebooks/Ch5-Continuous-time models.ipynb
@@ -66,18 +66,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f5c546",
+   "id": "fe4fc22f",
    "metadata": {},
    "source": [
     "$$\n",
-    "f(x, s) = \\frac{1}{s x \\sqrt{2\\pi}}\n",
-    "              \\exp\\left(-\\frac{\\log^2(x)}{2s^2}\\right)\n",
-    "$$"
+    "\\log S_t \\,-\\,\\log S_0 = \\log \\frac{S_t}{S_0} =\\left(\\mu-\\frac{1}{2}\\sigma^2\\right) t + \\sigma W_t  \\,. \n",
+    "$$\n",
+    "\n",
+    "Thus we can calculate the distribution of $\\log \\frac{S_t}{S_0}$ as\n",
+    "$$ \\log \\frac{S_t}{S_0} \\sim  N\\left(\\left(\\mu-\\frac{1}{2}\\sigma^2\\right)t,\\sigma^2 t\\right)$$ \n",
+    "\n",
+    "or equivalently \n",
+    "\n",
+    "$$\\log S_t \\sim  N\\left(\\log S_0+\\left(\\mu-\\frac{1}{2}\\sigma^2\\right)t,\\sigma^2 t\\right)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "96b868ee",
    "metadata": {},
    "outputs": [],
@@ -88,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "273af0f9",
    "metadata": {},
    "outputs": [],
@@ -101,9 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "a12367c3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -133,9 +141,221 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0e17dab",
+   "metadata": {},
+   "source": [
+    "## Pricing of a European Call option"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2d92f1e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S = 1\n",
+    "K = 1.1\n",
+    "sigma = 0.1\n",
+    "\n",
+    "t = 0\n",
+    "T = 1\n",
+    "\n",
+    "r = 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "526d486a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def d1_BS(S,K,r,sigma,t,T):\n",
+    "    return (np.log(S/K) + (r + 0.5*sigma**2)*(T-t))/(sigma * np.sqrt(T-t))\n",
+    "\n",
+    "def d2_BS(S,K,r,sigma,t,T):\n",
+    "    d1 = d1_BS(S,K,r,sigma,t,T)\n",
+    "    return d1 - sigma* np.sqrt(T-t)\n",
+    "\n",
+    "def computeBlackScholesCallPrice(t,T,S,r,sigma,K):\n",
+    "    d1 = d1_BS(S,K,r,sigma,t,T)\n",
+    "    d2 = d2_BS(S,K,r,sigma,t,T)\n",
+    "    Nd1 = stat.norm.cdf(d1)\n",
+    "    Nd2 = stat.norm.cdf(d2)\n",
+    "    return S*Nd1 - K*np.exp(-r*(T-t))*Nd2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2efb13e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.40310179804324886"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1_BS(S,K,r,sigma,t,T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fb96291f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.5031017980432488"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2_BS(S,K,r,sigma,t,T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "959e332b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02173945155462853"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "computeBlackScholesCallPrice(t,T,S,r,sigma,K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "77f88c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Delta_Call_BS(S,K,r,sigma,t,T):\n",
+    "    d1 = d1_BS(S,K,r,sigma,t,T)\n",
+    "    Nd1 = stat.norm.cdf(d1)\n",
+    "    return Nd1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d6808a18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.343436668962647"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Delta_Call_BS(S,K,r,sigma,t,T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c8bd700d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Gamma_Call_BS(S,K,r,sigma,t,T):\n",
+    "    d1 = d1_BS(S,K,r,sigma,t,T)\n",
+    "    nd1 = stat.norm.pdf(d1)\n",
+    "    return nd1/(S*sigma*np.sqrt(T-t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1aad5ef3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.678117344101192"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Gamma_Call_BS(S,K,r,sigma,t,T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7b147e62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Vega_Call_BS(S,K,r,sigma,t,T):\n",
+    "    d1 = d1_BS(S,K,r,sigma,t,T)\n",
+    "    nd1 = stat.norm.pdf(d1)\n",
+    "    return nd1*S*np.sqrt(T-t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2983367b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3678117344101192"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Vega_Call_BS(S,K,r,sigma,t,T)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60ef352c",
+   "id": "adeba5ae",
    "metadata": {},
    "outputs": [],
    "source": []
